# Project_293

./: .CMakeLists.txt.swp  CMakeLists.txt  Design.txt  Readme.md  install.sh
include/: complex.hpp  mandelbrot_util.hpp
src/: complex.cpp  mandelbrot.cpp  mandelbrot_util.cpp
