cmake_minimum_required (VERSION 3.16)
project (mandelbrot)
include_directories (${CMAKE_CURRENT_SOURCE_DIR}/include)
find_package (SFML 2.5 COMPONENTS graphics REQUIRED)
find_package (OpenMP)
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
add_executable (mandelbrot src/mandelbrot.cpp src/complex.cpp src/mandelbrot_util.cpp include/complex.hpp include/mandelbrot_util.hpp)
target_link_libraries (mandelbrot sfml-window sfml-graphics)
